completed garden solar lights page

--- a/products/test.html
+++ b/products/test.html
@@ -170,110 +170,112 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/street/ST86.png"></div>
-                              <h3 class="types_text">LED STREET LIGHTS </h3>
+                              <div class="coffee_img"><img src="img/garden/1.jpg"></div>
+                              <h3 class="types_text">90-002C</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/street/solar street grey.jpeg"></div>
-                              <h3 class="types_text">LED STREET LIGHTS</h3>
+                              <div class="coffee_img"><img src="img/garden/3.jpg"></div>
+                              <h3 class="types_text">90-002D</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/street/solar streetlight.jpeg"></div>
-                              <h3 class="types_text">LED STREET LIGHTS</h3>
+                              <div class="coffee_img"><img src="img/garden/6.jpeg"></div>
+                              <h3 class="types_text">90-003C</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/street/solr street black.jpeg"></div>
-                              <h3 class="types_text">LED STREET LIGHTS</h3>
+                              <div class="coffee_img"><img src="img/garden/5.jpg"></div>
+                              <h3 class="types_text">90-003D</h3>
                            </div>
                         </div>
                      </div>
                   </div>
-                  <!-- <div class="carousel-item">
+                  <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/filament/fila.jpg"></div>
-                              <h3 class="types_text">FILAMENT BULBS</h3>
+                              <div class="coffee_img"><img src="img/garden/9.jpg"></div>
+                              <h3 class="types_text">90-004C</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/filament/filamnt5.jpg"></div>
-                              <h3 class="types_text">FILAMENT BULBS</h3>
+                              <div class="coffee_img"><img src="img/garden/g2.jpg"></div>
+                              <h3 class="types_text">90-004D</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/filament/filament2.jpg"></div>
-                              <h3 class="types_text">FILAMENT BULBS</h3>
+                              <div class="coffee_img"><img src="img/garden/g4.jpg"></div>
+                              <h3 class="types_text">90-005D</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/filament/filament4.jpg"></div>
-                              <h3 class="types_text">FILAMENT BULBS</h3>
+                              <div class="coffee_img"><img src="img/garden/g7.jpg"></div>
+                              <h3 class="types_text">90-006C</h3>
                            </div>
                         </div>
                      </div>
-                  </div> -->
+                  </div>
                </div>
-               <!-- <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+               <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
                <i class="fa fa-arrow-left"></i>
                </a>
                <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
                <i class="fa fa-arrow-right"></i>
-               </a> -->
+               </a>
             </div>
          </div>
          <br>
          <div class="coffee_section_2">
-            <!-- <div id="main_slider" class="carousel slide" data-ride="carousel">
+            <div id="main_slider" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner">
                   <div class="carousel-item active">
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tracks/t1.jpeg"></div>
-                              <h3 class="types_text">LED TRACK LIGHT </h3>
+                              <div class="coffee_img"><img src="img/garden/2.jpeg"></div>
+                              <h3 class="types_text">90-003A </h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tracks/WhatsApp Image 2023-07-03 at 4.08.3 PM.jpeg"></div>
-                              <h3 class="types_text">LED TRACK SHORT</h3>
+                              <div class="coffee_img"><img src="img/garden/k2.jpg"></div>
+                              <h3 class="types_text">90-002A</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tracks/t3.jpeg"></div>
-                              <h3 class="types_text">LED TRACK LIGHT</h3>
+                              <div class="coffee_img"><img src="img/garden/g1.jpg"></div>
+                              <h3 class="types_text">90-005A</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tracks/WhatsApp Image 2023-07-03 at 4.08.30 PM.jpeg"></div>
-                              <h3 class="types_text">LED TRACK LIGHT</h3>
-                           </div>
-                        </div>
-                     </div>
-                  </div> -->
-                  <!-- <div class="carousel-item">
-                     <div class="container-fluid">
-                        <div class="row">
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/led-tube.jpeg"></div>
-                              <h3 class="types_text">FILAMENT BULBS</h3>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/led tube2.jpeg"></div>
-                              <h3 class="types_text">FILAMENT BULBS</h3>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/tt1.png"></div>
-                              <h3 class="types_text">FILAMENT BULBS</h3>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/tube7.jpeg"></div>
-                              <h3 class="types_text">FILAMENT BULBS</h3>
+                              <div class="coffee_img"><img src="img/garden/8.jpg"></div>
+                              <h3 class="types_text">90-004A</h3>
                            </div>
                         </div>
                      </div>
                   </div>
-               </div> -->
-               <!-- <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-               <i class="fa fa-arrow-left"></i>
-               </a>
-               <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-               <i class="fa fa-arrow-right"></i>
-               </a> -->
+                  
+            </div>
+         </div>
+      </div>
+         <br>
+         <div class="coffee_section_2">
+            <div id="main_slider" class="carousel slide" data-ride="carousel">
+               <div class="carousel-inner">
+                  <div class="carousel-item active">
+                     <div class="container-fluid">
+                        <div class="row">
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/garden/g8.jpg"></div>
+                              <h3 class="types_text">90-006B </h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/garden/k1.jpeg"></div>
+                              <h3 class="types_text">90-002B</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/garden/g3.jpeg"></div>
+                              <h3 class="types_text">90-005B</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/garden/7.jpeg"></div>
+                              <h3 class="types_text">90-004B</h3>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  
             </div>
          </div>
       </div>
