responsiveness of navbar

--- a/products.html
+++ b/products.html
@@ -167,67 +167,63 @@
   </head>
   <body>
      <div class="header_section">
-        <div class="container-fluid">
-           <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a> -->
-            <a class="navbar-brand" href="index.html"><b>NEELUX</b></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top" style="background-color: #f8f9fa;">
+           <!-- Uncomment below if you prefer to use an image logo -->
+           <!-- <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a> -->
+           <a class="navbar-brand" href="../index.html"><b>NEELUX</b></a>
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           </button>
+           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link" href="product.html">Product</a>
-                </li> -->
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                    <a class="dropdown-item" href="../products.html">ALL PRODUCTS</a>
-                    <a class="dropdown-item" href="../products/strip.html">STRIP LIGHTS</a>
-                    <a class="dropdown-item" href="../products/flood.html">FLOOD LIGHTS</a>
-                    <a class="dropdown-item" href="../products/led_bulb.html">LED BULBS</a>
-                    <a class="dropdown-item" href="../products/filament.html">FILAMENT BULBS</a>
-                    <a class="dropdown-item" href="../products/wall.html">WALL LAMPS</a>
-                    <a class="dropdown-item" href="../products/down.html">DOWN LIGHT</a>
-                    <a class="dropdown-item" href="../products/track.html">TRACK LIGHTS</a>
-                    <a class="dropdown-item" href="../products/street.html">STREET LIGHTS</a>
-                    <a class="dropdown-item" href="../products/chandelier.html">CHANDELIERS</a>
-                    <a class="dropdown-item" href="../products/table.html">TABLE LAMPS</a>
-                    <a class="dropdown-item" href="../products/ceilin.html">CEILING LIGHTS</a>
-                    <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
-                    <a class="dropdown-item" href="../products/garden.html">GARDEN LAMPS</a>
-                    <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
-                    <a class="dropdown-item" href="../products/tubes.html">LED TUBES</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown">Support</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                    <a class="dropdown-item" href="support.html">Contact Us</a>
-                    <a class="dropdown-item" href="./assets/privacy-policy.html">Privacy Policy</a>
-                  </div>
-                </li>
-              </ul>
-                  
-                 <form class="form-inline my-2 my-lg-0">
-                    <div class="login_bt">
-                       <ul>
-                          <!-- <li><a href="#"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li> -->
-                          <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                       </ul>
+                 <li class="nav-item active">
+                    <a class="nav-link" href="../index.html">Home</a>
+                 </li>
+                 <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                       <a class="dropdown-item" href="../products.html">ALL PRODUCTS</a>
+                       <a class="dropdown-item" href="../products/strip.html">STRIP LIGHTS</a>
+                       <a class="dropdown-item" href="../products/flood.html">FLOOD LIGHTS</a>
+                       <a class="dropdown-item" href="../products/led_bulb.html">LED BULBS</a>
+                       <a class="dropdown-item" href="../products/filament.html">FILAMENT BULBS</a>
+                       <a class="dropdown-item" href="../products/wall.html">WALL LAMPS</a>
+                       <a class="dropdown-item" href="../products/down.html">DOWN LIGHT</a>
+                       <a class="dropdown-item" href="../products/track.html">TRACK LIGHTS</a>
+                       <a class="dropdown-item" href="../products/street.html">STREET LIGHTS</a>
+                       <a class="dropdown-item" href="../products/chandelier.html">CHANDELIERS</a>
+                       <a class="dropdown-item" href="../products/table.html">TABLE LAMPS</a>
+                       <a class="dropdown-item" href="../products/ceilin.html">CEILING LIGHTS</a>
+                       <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
+                       <a class="dropdown-item" href="../products/garden.html">GARDEN LAMPS</a>
+                       <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
+                       <a class="dropdown-item" href="../products/tubes.html">LED TUBES</a>
                     </div>
-                 </form>
-              </div>
-           </nav>
-        </div>
-
+                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="../about.html">About</a>
+                 </li>
+                 <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown">Support</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                       <a class="dropdown-item" href="../support.html">Contact Us</a>
+                       <a class="dropdown-item" href="../assets/privacy-policy.html">Privacy Policy</a>
+                    </div>
+                 </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                 <div class="login_bt">
+                    <ul>
+                       <!-- <li><a href="#"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li> -->
+                       <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                    </ul>
+                 </div>
+              </form>
+           </div>
+        </nav>
+     </div>
+     
      </div>
      <!-- header section end -->
     <!--PRODUCTS=====-->
