--- a/support.html
+++ b/support.html
@@ -103,16 +103,15 @@
             <div class="contact_section_2">
                <div class="row">
                   <div class="col-md-12">
-                     <form action="./mailer/send_email.php" method="POST"></form>
-                        <div class="mail_section_1">
-                       
+                     <div class="mail_section_1">
+                        <form action="./mailer/send_email.php" method="POST">
                            <input type="text" name="name" placeholder="Your Name" required><br>
                            <input type="email" name="email" placeholder="Your Email" required><br>
                            <input type="text" name="phone" placeholder="Your Phone" required><br>
                            <textarea name="message" placeholder="Your Message" required></textarea><br>
                            <input type="submit" value="Send">
-                        </div>
-                     </form>
+                        </form>
+                     </div>
                   </div>
                   <!-- <div class="map_main">
                      <div class="map-responsive">
