worked on privacy policy page, its complete

--- a/assets/privacy-policy.html
+++ b/assets/privacy-policy.html
@@ -6,60 +6,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Policy</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            margin: 0;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
         .abort-btn {
-  background-color: red;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 4px;
-  cursor: pointer;
-}
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-.abort-btn:hover {
-  background-color: darkred;
-}
+        .abort-btn:hover {
+            background-color: darkred;
+        }
 
+        h1 {
+            margin-top: 0;
+            text-align: center;
+        }
+
+        p {
+            line-height: 1.6;
+            text-align: justify;
+        }
     </style>
 </head>
 <body>
-<a href="../index.html"><button class="abort-btn">Back Home</button></a>
-
-<center>
-    <h1>Our Privacy Policy</h1>
-       <p>
-
-
-Effective Date: 7/14/2023
-
-Thank you for visiting our website! We are committed to protecting your privacy and ensuring the security of any personal information you provide to us. This Privacy Policy outlines how we collect, use, and protect the information you provide while accessing and interacting with our website.
-
-Information We Collect
-We do not collect any personal information from you when you browse our website or view our products. We do not use cookies or any other tracking technologies that can identify or track individuals.
-
-Use of Information
-Since we do not collect any personal information, we do not use or share any information about you with third parties. Our website is solely dedicated to showcasing our products and providing information about them.
-
-Security
-We take reasonable measures to protect the information you provide to us against unauthorized access, alteration, or disclosure. However, please be aware that no method of transmission over the internet or electronic storage is completely secure, and we cannot guarantee the absolute security of your information.
-
-External Links
-Our website may contain links to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and we cannot accept responsibility or liability for their respective privacy policies or practices.
-
-Children's Privacy
-Our website is not intended for use by individuals under the age of 13. We do not knowingly collect personal information from children. If you are a parent or guardian and you believe that your child has provided us with personal information, please contact us immediately so that we can remove such information from our records.
-
-Changes to this Privacy Policy
-We reserve the right to update or modify this Privacy Policy at any time without prior notice. Any changes to this policy will be posted on this page with an updated effective date. By continuing to use our website after any modifications, you acknowledge and accept the changes to the Privacy Policy.
-
-Contact Us
-If you have any questions, concerns, or requests regarding this Privacy Policy or the practices of our website, please contact us at [Insert Contact Information].
-
-By using our website, you acknowledge that you have read, understood, and agreed to the terms and conditions of this Privacy Policy.
-
-Last updated: 7/14/2023
-       </p>
-</center>
- 
+    <div class="container">
+        <a href="../index.html"><button class="abort-btn">Back Home</button></a>
+        <h1>Our Privacy Policy</h1>
+        <p>
+            Effective Date: 7/14/2023
+        </p>
+        <p>
+            Thank you for visiting our website! We are committed to protecting your privacy and ensuring the security of any personal information you provide to us. This Privacy Policy outlines how we collect, use, and protect the information you provide while accessing and interacting with our website.
+        </p>
+        <p>
+            <strong>Information We Collect</strong><br>
+            We do not collect any personal information from you when you browse our website or view our products. We do not use cookies or any other tracking technologies that can identify or track individuals.
+        </p>
+        <p>
+            <strong>Use of Information</strong><br>
+            Since we do not collect any personal information, we do not use or share any information about you with third parties. Our website is solely dedicated to showcasing our products and providing information about them.
+        </p>
+        <p>
+            <strong>Security</strong><br>
+            We take reasonable measures to protect the information you provide to us against unauthorized access, alteration, or disclosure. However, please be aware that no method of transmission over the internet or electronic storage is completely secure, and we cannot guarantee the absolute security of your information.
+        </p>
+        <p>
+            <strong>External Links</strong><br>
+            Our website may contain links to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and we cannot accept responsibility or liability for their respective privacy policies or practices.
+        </p>
+        <p>
+            <strong>Children's Privacy</strong><br>
+            Our website is not intended for use by individuals under the age of 13. We do not knowingly collect personal information from children. If you are a parent or guardian and you believe that your child has provided us with personal information, please contact us immediately so that we can remove such information from our records.
+        </p>
+        <p>
+            <strong>Changes to this Privacy Policy</strong><br>
+            We reserve the right to update or modify this Privacy Policy at any time without prior notice. Any changes to this policy will be posted on this page with an updated effective date. By continuing to use our website after any modifications, you acknowledge and accept the changes to the Privacy Policy.
+        </p>
+        <p>
+            <strong>Contact Us</strong><br>
+            If you have any questions, concerns, or requests regarding this Privacy Policy or the practices of our website, please contact us at teelux.uganda@gmail.com.
+        </p>
+        <p>
+            By using our website, you acknowledge that you have read, understood, and agreed to the terms and conditions of this Privacy Policy.
+        </p>
+        <p>
+            Last updated: 7/14/2023
+        </p>
+    </div>
 </body>
 </html>
