--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="images/table.jpeg"></div>
+                              <div class="banner_img"><img src="images/1.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
