accessories page completed

--- a/products/test2.html
+++ b/products/test2.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | Table Lamps</title>
+      <title>Neelux | LED Accessories</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -31,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_table">
+      <div class="header_accessories">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top" style="background-color: #f8f9fa;">
                <!-- Uncomment below if you prefer to use an image logo -->
@@ -97,13 +97,13 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/table/header/1.jpg"></div>
+                              <div class="banner_img"><img src="img/accessories/header/2.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color: rgb(255, 255, 255);">LED TABLE LAMPS </h1>
-                                 <h5 class="tasty_text" style="color:white;">TRANSPARENT</h5>
-                                 <p class="banner_text" style="color:white;">TOUCH SENSTIVE</p>
+                                 <h1 class="banner_taital" style="color: rgb(241, 9, 9);">2835-1 6mm </h1>
+                                 <h5 class="tasty_text" style="color:red">CHASER</h5>
+                                 <p class="banner_text" style="color:red">FOR SINGLE STRIP</p>
                               </div>
                            </div>
                         </div>
@@ -111,14 +111,14 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/table/header/2.jpg"></div>
+                              <div class="banner_img"><img src="img/accessories/header/bg-pic.png"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
                                 <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color:white;">LED TABLE LAMPS</h1>
-                                 <h5 class="tasty_text" style="color:white;">SPHERICAL AND FLAT</h5>
-                                 <p class="banner_text" style="color:white;">TOUCH SENSTIVE</p>
+                                 <h1 class="banner_taital" style="color:red">2835-1 CHASER</h1>
+                                 <h5 class="tasty_text" style="color:red">COMPLETE SET</h5>
+                                 <p class="banner_text" style="color:red">PINS INCLUSIVE</p>
                                </div>
                               </div>
                            </div>
@@ -127,13 +127,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/table/header/6.jpg"></div>
+                              <div class="banner_img"><img src="img/accessories/header/rail2.jpg"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital" style="color:white;">LED TABLE LAMP</h1>
-                                 <h5 class="tasty_text" style="color:white;">TL-0005</h5>
-                                 <p class="banner_text" style="color:white;">MULTI-COLORED</p>
+                              <h1 class="banner_taital" style="color:red">25-0000</h1>
+                                 <h5 class="tasty_text" style="color:red">SHORT BAR RAIL</h5>
+                                 <p class="banner_text" style="color:red">BLACK AND WHITE</p>
                            </div>
                               </div>
                            </div>
@@ -167,20 +167,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/table/2.jpeg"></div>
-                              <h3 class="types_text">TL-0011/TL-0010 (BRONZE)</h3>
+                              <div class="coffee_img"><img src="img/accessories/1.jpeg"></div>
+                              <h3 class="types_text">2835-3 12MM CONNECTOR</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/table/3.jpeg"></div>
-                              <h3 class="types_text">TL-0011/TL-0010 (SILVER)</h3>
+                              <div class="coffee_img"><img src="img/accessories/2.jpg"></div>
+                              <h3 class="types_text">2835-1 6MM CHASER</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/table/4.jpg"></div>
-                              <h3 class="types_text">TL-0007</h3>
+                              <div class="coffee_img"><img src="img/accessories/4.jpeg"></div>
+                              <h3 class="types_text">T8 TUBE HOLDER</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/table/5.jpg"></div>
-                              <h3 class="types_text">TL-0009</h3>
+                              <div class="coffee_img"><img src="img/accessories/9.jpeg"></div>
+                              <h3 class="types_text">DRIVER</h3>
                            </div>
                         </div>
                      </div>
@@ -262,21 +262,21 @@
                      <div class="container-fluid">
                         <div class="row">
                             <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="img/table/6.jpg"></div>
-                                <h3 class="types_text">TL-0007 </h3>
+                                <div class="coffee_img"><img src="img/accessories/8.jpeg"></div>
+                                <h3 class="types_text">RGB REMOTE ADAPTOR </h3>
                              </div>
                              <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="img/table/7.jpg"></div>
-                                <h3 class="types_text">TL-0006</h3>
+                                <div class="coffee_img"><img src="img/accessories/7.jpeg"></div>
+                                <h3 class="types_text">CONNECTOR PIN</h3>
                              </div>
                              <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="img/table/8.jpg"></div>
-                                <h3 class="types_text">TL-0008</h3>
+                                <div class="coffee_img"><img src="img/accessories/rail.jpg"></div>
+                                <h3 class="types_text">TRACK RAILS</h3>
                              </div>
-                             <!-- <div class="col-lg-3 col-md-6">
-                                <div class="coffee_img"><img src="img/walls/s1.jpg"></div>
-                                <h3 class="types_text">WL-0046</h3>
-                             </div> -->
+                             <div class="col-lg-3 col-md-6">
+                                <div class="coffee_img"><img src="img/accessories/tube-holder.jpg"></div>
+                                <h3 class="types_text">TUBE HOLDER</h3>
+                             </div>
                         </div>
                      </div>
                   </div>
