--- a/products/table.html
+++ b/products/table.html
@@ -185,7 +185,7 @@
                         </div>
                      </div>
                   </div>
-                  <!-- <div class="carousel-item">
+                  <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
@@ -238,7 +238,7 @@
                <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
                <i class="fa fa-arrow-right"></i>
                </a>
-            </div> -->
+            </div>
          </div>
       </div>
       <!-- LIGHTS section end -->
